corpus/cpp/access_control/case-01/snapshots/gcc15_plus/dual_sink_structured/render.ci.txt
src/main.cpp:8:20: error: [unavailable_api] access to private or protected member
help: use a public interface, add a friend declaration, or change access specifier
name: int Counter::value
use : return counter.value;
from: src/main.cpp:3:9 int value = 1;
| src/main.cpp:8:20
|     return counter.value;
|                    ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output